[tool.poetry]
name = "clean-domain"
version = "0.1.0"
description = "Demo for clean project setup"
authors = ["Cornel"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "*"
mypy = "*"
ruff = "*"

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.mypy-somelibrary]
ignore_missing_imports = true

[tool.ruff]
line-length = 100

[tool.ruff.format]
indent-style = "tab"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
